// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PermissionPrompt > snapshots > renders Bash permission correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request                                                                           │
│                                                                                                  │
│ Tool: Bash                                                                                       │
│ Input: {"command":"npm test"}                                                                    │
│                                                                                                  │
│ Available Actions:                                                                               │
│ [Y]es - Allow once                                                                               │
│ [N]o - Deny                                                                                      │
│                                                                                                  │
│ y/n to choose                                                                                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders Write permission correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request                                                                           │
│                                                                                                  │
│ Tool: Write                                                                                      │
│ Input: {"file_path":"/test.ts"}                                                                  │
│                                                                                                  │
│ Available Actions:                                                                               │
│ [Y]es - Allow once                                                                               │
│ [N]o - Deny                                                                                      │
│                                                                                                  │
│ y/n to choose                                                                                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders permission with queue count correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request (+5 more pending)                                                         │
│                                                                                                  │
│ Tool: Edit                                                                                       │
│ Input: {"file_path":"/test/file.ts","content":"test conte                                        │
│                                                                                                  │
│ Available Actions:                                                                               │
│ [Y]es - Allow once                                                                               │
│ [N]o - Deny                                                                                      │
│                                                                                                  │
│ y/n to choose                                                                                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders permission with suggestions correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request                                                                           │
│                                                                                                  │
│ Tool: Write                                                                                      │
│ Input: {"file_path":"/test/file.ts","content":"test conte                                        │
│                                                                                                  │
│ Available Actions:                                                                               │
│ [Y]es - Allow once                                                                               │
│ [N]o - Deny                                                                                      │
│                                                                                                  │
│ Save for future (always allow):                                                                  │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ [L]ocal (.claude/settings.local.json):                                                       │ │
│ │ This will be saved to: .claude/settings.local.json                                           │ │
│ │                                                                                              │ │
│ │ 1. Add allow rule:                                                                           │ │
│ │    • Write(*)                                                                                │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ y/n/l to choose                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`PermissionPrompt > snapshots > renders userSettings suggestion correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ [!] Permission Request                                                                           │
│                                                                                                  │
│ Tool: Write                                                                                      │
│ Input: {"file_path":"/test/file.ts","content":"test conte                                        │
│                                                                                                  │
│ Available Actions:                                                                               │
│ [Y]es - Allow once                                                                               │
│ [N]o - Deny                                                                                      │
│                                                                                                  │
│ Save for future (always allow):                                                                  │
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │ [U]ser (~/.claude/settings.json):                                                            │ │
│ │ This will be saved to: ~/.claude/settings.json                                               │ │
│ │                                                                                              │ │
│ │ 1. Add allow rule:                                                                           │ │
│ │    • Write(*)                                                                                │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ y/n/u to choose                                                                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
